# bpdneo-cxr-ui

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
apps/: gui_app.py
docs/: changelog.md  conf.py  index.md  installation.md  quickstart.md  references.bib
docs/api/: core.md  index.md  models.md  ui.md
docs/user_guide/: data_format.md  dataset_evaluation.md  preprocessing.md  single_image.md
src/bpd_ui/: __init__.py
src/bpd_ui/core/: __init__.py  deskew.py  image_io.py  metrics.py  model_manager.py  roi_service.py  state.py  tasks.py
src/bpd_ui/models/: __init__.py  model.py  model_util.py
src/bpd_ui/ui/: __init__.py  dataset_eval_tab.py  main_window.py  overlay_canvas.py  preprocess_tab.py  single_eval_tab.py
src/bpdneo-cxr-ui/models/: __init__.py  model_util.py
